# wgtr-ecs

./: Cargo.toml  README.md
src/: lib.rs  macros.rs  query.rs  query_entity.rs  resource.rs  system.rs
tests/: canary.rs  entities.rs  macros.rs  playground.rs  queries.rs  resources.rs  systems.rs
